# ai-skill-generator

./: Cargo.toml  README.md  qa-playwright-expert.md
src/: app.rs  events.rs  main.rs  skill.rs  ui.rs
