[package]
name = "ai-skill-generator"
version = "0.1.0"
edition = "2021"
description = "A TUI application for generating reusable AI skills in structured Markdown format"
authors = ["AI Skill Generator"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
unicode-width = "0.2"
tui-textarea = "0.7"
